# borglab

./: .dockerignore  .gitignore  Cargo.toml  README.md
.github/workflows/: build-borgapi.yml  build-borgbot.yml  build-borgui.yml  deploy-borgui.yml  deploy-fly-app.yml  rust-build-and-test.yml
borgapi/: Cargo.toml
borgapi/src/: main.rs
borgapi/src/db/: mod.rs
borgapi/src/routes/: mod.rs  user.rs
borgbot/: Cargo.toml  README.md
borgbot/src/: main.rs  stream.rs
borgui/: next.config.js  package-lock.json  package.json
borgui/app/: page.tsx  root.tsx
borgui/components/: AvatarGenerator.tsx  Box.tsx  Credits.tsx  Footer.tsx  Layout.tsx  LoadingSpinner.tsx  Login.tsx  Navigation.tsx  Profile.tsx  ViewerList.tsx
borgui/components/AvatarGenerator/: Sticker.tsx  index.tsx
borgui/pages/: index.tsx
borgui/pages/admin/: index.tsx
borgui/pages/api/auth/: [...nextauth].ts
borgui/src/: App.tsx
borgui/src/components/: ViewerList.tsx
config/borgui/: Dockerfile  fly.dev.toml
entity/: Cargo.toml
entity/src/: avatar.rs  lib.rs  viewer.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230522_231609_create_viewer_table.rs  m20230526_010150_create_avatar_table.rs
