[package]
name = "borgapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
chrono = "0.4.24"
entity = { path = "../entity" }
migration = { path = "../migration" }
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-actix-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "^1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }