[package]
name = "borgbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
twitch-irc = { version = "^5.0.0", features = ["refreshing-token-rustls-native-roots"] }
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
